feat: Make less db calls when loading cognito users - speeding it up?
[#OCD-4734]